<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <TextView
        android:id="@+id/opening_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_message"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorOpenMessage"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_message"
        android:hint="@string/edit_message"
        android:inputType="text"
        android:layout_marginTop="20dp" />
    <Button
        android:id="@+id/button_testluck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_testluck"
        android:layout_marginTop="2dp"
        android:background="@color/colorOpenMessage"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/text_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorOpenMessage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/vision"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:src="@drawable/vision_quote"
        android:contentDescription="@string/hellen_vision"
        android:layout_marginTop="0dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:id="@+id/talk_button"
        android:layout_above="@+id/press_done"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        android:text="@string/talk_button"/>
    <Button
        android:id="@+id/press_done"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/fortune_done"
        android:layout_gravity="center"
        android:background="@color/colorOpenMessage"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText" />

</LinearLayout>

